# molecule_manager

./: .gitignore  CLAUDE.md
molecule-manager/: .dockerignore  .env.example  .gitignore  railway.toml
molecule-manager/apps/api/: alembic.ini  pyproject.toml
molecule-manager/apps/api/alembic/: env.py
molecule-manager/apps/api/alembic/versions/: 0001_initial_schema.py  0002_add_role_to_lab_members.py  0003_add_audit_logs.py  0004_add_inchi_to_molecules.py  0005_add_morgan_fingerprint_to_molecules.py  0006_add_notifications.py  0007_add_proteins.py  0008_add_experiment_proteins.py
molecule-manager/apps/api/app/: main.py
molecule-manager/apps/api/app/core/: session.py  settings.py
molecule-manager/apps/api/app/db/: session.py
molecule-manager/apps/api/app/models/: __init__.py  audit_log.py  experiment.py  experiment_molecule.py  experiment_protein.py  lab.py  lab_member.py  molecule.py  notification.py  protein.py  user.py
molecule-manager/apps/api/app/routers/: audit.py  auth.py  chemistry.py  experiments.py  labs.py  molecules.py  notifications.py  proteins.py
molecule-manager/apps/api/app/schemas/: auth.py  chemistry.py  experiment.py  lab.py  molecule.py  protein.py
molecule-manager/apps/api/app/services/: audit.py  chemistry.py  email.py  export_excel.py  import_excel.py  lab.py  molecule.py  notifications.py  protein_resolution.py  pubchem.py
molecule-manager/apps/api/app/utils/: search.py
molecule-manager/apps/api/tests/: test_chemistry.py
molecule-manager/apps/web/: middleware.ts  package-lock.json  (+2 more)
molecule-manager/infra/: docker-compose.yml
(+31 files in other folders)
